# advent_of_code_2024

./: Cargo.toml  output.txt  output2.txt
input/day_02/: debug
input/day_06/: test
input/day_13/: test
input/day_15/: test
input/day_21/: directional_keypad  numeric_keypad
input/day_23/: test
src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  grid.rs  main.rs
src/day_17/: tests.rs
src/day_22/: tests.rs
