[package]
name = "advent_of_code_2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.8.0"
cached = "0.54.0"
count-digits = "0.5.1"
itertools = "0.13.0"
lazy_static = "1.5.0"
pathfinding = "4.12.0"
priority-queue = "2.1.1"
rayon = "1.10.0"
strum = "0.26.3"
strum_macros = "0.26.4"
